# agent-workflow

./: Interpreter.hs  Main.hs  Parser.hs  ParserSlides.hs  Syntax.hs  agent-workflow.cabal  example.awl
.claude/: settings.local.json
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
examples/: cloud_architecture_consensus.awl  customer_support_triage.awl  n8n_workflow.awl  real_llm.awl
tests/: 01_const_let_var.awl  02_arithmetic.awl  03_string_concat.awl  04_comparisons.awl  05_logical.awl  06_records_projection.awl  07_record_equality.awl  08_unbound_variable.awl  09_proj_missing_field.awl  10_proj_non_record.awl  11_op_type_error.awl  12_err_propagation_in_record.awl  13_err_propagation_in_op.awl  14_if_true.awl  15_if_false.awl  16_if_nonbool.awl  17_fail.awl  18_try_no_error.awl  19_try_catch.awl  20_nested_try.awl  21_retry_succeeds.awl  22_retry_all_fail.awl  23_retry_in_try.awl  24_config.awl  25_mock_backend.awl  26_python_backend.awl  27_http_backend.awl  28_llm_backend.awl  29_fixed_planner.awl  30_fixed_critic_branch.awl  31_fixed_merger_multiarg.awl  32_fixed_validator.awl  33_fixed_summarizer.awl  34_custom_ai.awl  35_custom_ai_wrong_arity.awl  36_unknown_agent.awl  37_seq_state_propagation.awl  38_let_shadow.awl  39_let_in_try_visible_after.awl  40_full_pipeline.awl  (+10 more)
